[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planckpr4lensing"
dynamic = ["version"]
authors = [
    {name = "Julien Carron"},
]
description = "External Cobaya likelihood package: Planck PR4(NPIPE) lensing"
readme = "README.md"
license = {text = "LGPL"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "cobaya>=2.0.5",
]

[project.optional-dependencies]
test = [
    "camb>=1.0.5",
]

[project.urls]
Homepage = "https://github.com/carronj/planck_PR4_lensing"
Repository = "https://github.com/carronj/planck_PR4_lensing"
Documentation = "https://github.com/carronj/planck_PR4_lensing"
"Bug Tracker" = "https://github.com/carronj/planck_PR4_lensing/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["planckpr4lensing*"]

[tool.setuptools.package-data]
planckpr4lensing = [
    "*.yaml",
    "*.bibtex", 
    "data_pr4/*",
    "data_pr4/**/*",
]

[tool.setuptools.dynamic]
version = {attr = "planckpr4lensing._version.__version__"}
